Bug 1526653 - Include struct definitions for user_vfp and user_vfp_exc.

Gbp-Pq: Topic fixes
Gbp-Pq: Name Bug-1526653-Include-struct-definitions-for-user_vfp-.patch